--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>StoryBook for Kids</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>📖 Nuthan's Picture StoryBook</h1>
+    <p>Fun and colorful stories for kids</p>
+  </header>
+
+  <main class="gallery">
+    <div class="page">
+      <img src="images/1.jpg" alt="Cover Page">
+    </div>
+    <div class="page">
+      <img src="images/2.jpg" alt="Page 1">
+    </div>
+    <div class="page">
+      <img src="images/3.jpg" alt="Page 2">
+    </div>
+    <div class="page">
+      <img src="images/4.jpg" alt="Page 3">
+    </div>
+    <div class="page">
+      <img src="images/5.jpg" alt="Page 4">
+    </div>
+    <div class="page">
+      <img src="images/6.jpg" alt="Page 5">
+    </div>
+    <div class="page">
+      <img src="images/7.jpg" alt="Page 6">
+    </div>
+    <div class="page">
+      <img src="images/8.jpg" alt="Page 7">
+    </div>
+    <div class="page">
+      <img src="images/9.jpg" alt="Page 8">
+    </div>
+    <div class="page">
+      <img src="images/10.jpg" alt="Page 9">
+    </div>
+    <div class="page">
+      <img src="images/11.jpg" alt="End Page">
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Nutan Kumar | Made with ❤️ for kids</p>
+  </footer>
+</body>
+</html>
 
