Flip animation index.html

--- a/index.html
+++ b/index.html
@@ -13,39 +13,101 @@
   </header>
 
   <main class="gallery">
-    <div class="page">
-      <img src="images/1.jpg" alt="Cover Page">
+   <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/1.jpg" alt="Cover">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/2.jpg" alt="Page 1">
+  </div>
+    <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/2.jpg" alt="Page 1">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/3.jpg" alt="Page 2">
+  </div>
+    <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/3.jpg" alt="Page 2">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/4.jpg" alt="Page 3">
+  </div>
+    <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/4.jpg" alt="Page 3">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/5.jpg" alt="Page 4">
+  </div>
+    <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/5.jpg" alt="Page 4">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/6.jpg" alt="Page 5">
+  </div>
+   <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/6.jpg" alt="Page 5">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/7.jpg" alt="Page 6">
+  </div>
+   <div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/7.jpg" alt="Page 6">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/8.jpg" alt="Page 7">
+  </div><div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/8.jpg" alt="Page 7">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/9.jpg" alt="Page 8">
+  </div><div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/9.jpg" alt="Page 8">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/10.jpg" alt="Page 9">
+  </div><div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/10.jpg" alt="Page 9">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
-    <div class="page">
-      <img src="images/11.jpg" alt="End Page">
+  </div><div class="page flip-card">
+    <div class="flip-card-inner">
+      <div class="flip-card-front">
+        <img src="images/11.jpg" alt="Eng Page">
+      </div>
+      <div class="flip-card-back">        
+      </div>
     </div>
+  </div>
   </main>
 
   <footer>
