Rename Flip Card index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main class="gallery">
-   <div class="page flip-card">
+   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/1.jpg" alt="Cover">
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-    <div class="page flip-card">
+    <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/2.jpg" alt="Page 1">
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-    <div class="page flip-card">
+    <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/3.jpg" alt="Page 2">
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-    <div class="page flip-card">
+    <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/4.jpg" alt="Page 3">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-    <div class="page flip-card">
+    <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/5.jpg" alt="Page 4">
@@ -58,7 +58,7 @@
       </div>
     </div>
   </div>
-   <div class="page flip-card">
+   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/6.jpg" alt="Page 5">
@@ -67,7 +67,7 @@
       </div>
     </div>
   </div>
-   <div class="page flip-card">
+   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/7.jpg" alt="Page 6">
@@ -75,7 +75,7 @@
       <div class="flip-card-back">        
       </div>
     </div>
-  </div><div class="page flip-card">
+  </div><div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/8.jpg" alt="Page 7">
@@ -83,7 +83,7 @@
       <div class="flip-card-back">        
       </div>
     </div>
-  </div><div class="page flip-card">
+  </div><div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/9.jpg" alt="Page 8">
@@ -91,7 +91,7 @@
       <div class="flip-card-back">        
       </div>
     </div>
-  </div><div class="page flip-card">
+  </div><div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/10.jpg" alt="Page 9">
@@ -99,7 +99,7 @@
       <div class="flip-card-back">        
       </div>
     </div>
-  </div><div class="page flip-card">
+  </div><div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
         <img src="images/11.jpg" alt="Eng Page">
