--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>My Picture Book</h1>
-    <p>Click on the page to flip and listen</p>
+    <h1>Monkey and Elephant</h1>
+    <p>Click on the arrows to flip and listen</p>
   </header>
 
   <main class="book-container">
@@ -27,7 +27,7 @@
   <div class="page-number" id="page-number">Page 1 of 12</div>
 
   <footer>
-    <p>© 2025 Nuthan Kumar | Created with ❤️</p>
+    <p>© 2025 LittleOneFable | Created with ❤️</p>
   </footer>
 
   <script src="script.js"></script>
